--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
   <string name="search_title_format">Search: %s</string>
   <string name="search_all">All quotes</string>
   <string name="authentication_error">Unable to Authenticate User</string>
+  <string name="sign_out">Sign Out</string>
 </resources>
